Bundle → Localize. Refactoring of git4idea to reduce number of inspection warnings.