@@ -19,16 +19,16 @@ import consulo.annotation.component.ComponentScope;
 import consulo.annotation.component.ServiceAPI;
 import consulo.annotation.component.ServiceImpl;
 import consulo.execution.ExecutableValidator;
+import consulo.git.localize.GitLocalize;
 import consulo.ide.setting.ShowSettingsUtil;
 import consulo.project.Project;
+import consulo.ui.annotation.RequiredUIAccess;
 import consulo.versionControlSystem.VcsException;
-import git4idea.i18n.GitBundle;
+import jakarta.annotation.Nonnull;
 import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
 
-import jakarta.annotation.Nonnull;
-
-import java.util.Collections;
+import java.util.List;
 
 /**
  * Project service that is used to check whether currently set git executable is valid (just calls 'git version' and parses the output),
@@ -44,8 +44,8 @@ public class GitExecutableValidator extends ExecutableValidator {
     public GitExecutableValidator(@Nonnull Project project) {
         super(
             project,
-            GitBundle.message("git.executable.notification.title"),
-            GitBundle.message("git.executable.notification.description")
+            GitLocalize.gitExecutableNotificationTitle().get(),
+            GitLocalize.gitExecutableNotificationDescription().get()
         );
     }
 
@@ -55,13 +55,14 @@ public class GitExecutableValidator extends ExecutableValidator {
     }
 
     @Override
+    @RequiredUIAccess
     protected void showSettings() {
         ShowSettingsUtil.getInstance().showSettingsDialog(null, GitVcsConfigurable.class);
     }
 
     @Override
     public boolean isExecutableValid(@Nonnull String executable) {
-        return doCheckExecutable(executable, Collections.singletonList("--version"));
+        return doCheckExecutable(executable, List.of("--version"));
     }
 
     /**
